Bug 443129 - 'Closeable' window rule does not work on Wayland
Summary: 'Closeable' window rule does not work on Wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: 5.27.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2021-09-29 18:35 UTC by Patrick Silva
Modified: 2024-02-03 05:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-09-29 18:35:43 UTC
STEPS TO REPRODUCE
1. use Wayland session
2. open Dolphin
3. Alt+F3 -> More actions -> Configure Special Application settings -> Add "Closeable" Property -> Set it to Force "No", click on "Ok" button 

OBSERVED RESULT
Dolphin is still closeable

EXPECTED RESULT
Dolphin should not be closeable

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Akseli Lahtinen 2023-12-12 12:52:12 UTC
Can reproduce on Plasma 6

Operating System: Fedora Linux 39
KDE Plasma Version: 5.90.90
KDE Frameworks Version: 5.247.0
Qt Version: 6.6.0
Kernel Version: 6.6.4-200.fc39.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 2 Andrew Shark 2024-01-24 23:21:43 UTC
Wanted to note, that "Closable" rule still applies normally for apps under XWayland.
Comment 3 Bug Janitor Service 2024-01-25 12:50:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5042
Comment 4 Vlad Zahorodnii 2024-01-29 09:02:55 UTC
Git commit b21229e59a182f7feadb499a1da4e6712f7e9b5f by Vlad Zahorodnii.
Committed on 29/01/2024 at 08:57.
Pushed by vladz into branch 'master'.

wayland: Implement closeable window rule

M  +40   -0    autotests/integration/xdgshellwindow_rules_test.cpp
M  +1    -1    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/b21229e59a182f7feadb499a1da4e6712f7e9b5f
Comment 5 Vlad Zahorodnii 2024-01-29 09:03:21 UTC
Git commit e241e3eb9f7929ca0b49a3be4e1c1e72efb13aaf by Vlad Zahorodnii.
Committed on 29/01/2024 at 09:03.
Pushed by vladz into branch 'Plasma/6.0'.

wayland: Implement closeable window rule


(cherry picked from commit b21229e59a182f7feadb499a1da4e6712f7e9b5f)

M  +40   -0    autotests/integration/xdgshellwindow_rules_test.cpp
M  +1    -1    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/e241e3eb9f7929ca0b49a3be4e1c1e72efb13aaf