wayland: Implement closeable window rule

BUG: 443129